Ensure links are visible in tooltipster

--- a/static/styles/tooltipster/style.css
+++ b/static/styles/tooltipster/style.css
@@ -14,6 +14,9 @@
   padding: 4px 5px;
   overflow: hidden;
 }
+.tooltipster-default .tooltipster-content > a {
+  color: #5f5f5f;
+}
 
 /* This next selector defines the color of the border on the outside of the arrow. This will automatically match the color and size of the border set on the main tooltip styles. Set display: none; if you would like a border around the tooltip but no border around the arrow */
 .tooltipster-default .tooltipster-arrow .tooltipster-arrow-border {
